--- a/index.html
+++ b/index.html
@@ -1,120 +1,67 @@
-/* Basic Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Fashion Store - Trendy Clothing and Accessories">
+  <title>Fashion Store</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Navigation Bar -->
+  <header>
+    <nav>
+      <div class="logo">
+        <a href="#">FashionStore</a>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-body {
-  font-family: 'Segoe UI', sans-serif;
-  line-height: 1.6;
-  background-color: #fff;
-  color: #333;
-}
+  <!-- Main Section -->
+  <main>
+    <section class="hero">
+      <h1>Welcome to FashionStore</h1>
+      <p>Shop the latest trends in fashion and accessories!</p>
+    </section>
 
-/* Header */
-header {
-  background: #111;
-  color: #fff;
-  padding: 20px 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+    <!-- Featured Products -->
+    <section class="products">
+      <h2>Featured Products</h2>
+      <div class="product-list">
+        <div class="product-card">
+          <img src="product1.jpg" alt="Product 1">
+          <h3>Stylish Jacket</h3>
+          <p>$99.99</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product-card">
+          <img src="product2.jpg" alt="Product 2">
+          <h3>Classic T-shirt</h3>
+          <p>$29.99</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product-card">
+          <img src="product3.jpg" alt="Product 3">
+          <h3>Elegant Dress</h3>
+          <p>$79.99</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
-header .logo {
-  font-size: 24px;
-  font-weight: bold;
-}
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 FashionStore. All Rights Reserved.</p>
+  </footer>
 
-header nav ul {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
-
-header nav ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-header nav ul li a:hover {
-  text-decoration: underline;
-}
-
-/* Hero Section */
-.hero {
-  background: url('images/hero-banner.jpg') no-repeat center center/cover;
-  color: #fff;
-  text-align: center;
-  padding: 100px 20px;
-}
-
-.hero h1 {
-  font-size: 48px;
-  margin-bottom: 10px;
-}
-
-.hero p {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.hero .btn {
-  background: #e91e63;
-  color: #fff;
-  padding: 12px 25px;
-  text-decoration: none;
-  border-radius: 4px;
-}
-
-.hero .btn:hover {
-  background: #c2185b;
-}
-
-/* Products Section */
-.products {
-  padding: 60px 40px;
-  text-align: center;
-}
-
-.products h2 {
-  font-size: 36px;
-  margin-bottom: 40px;
-}
-
-.product-grid {
-  display: flex;
-  gap: 30px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.product {
-  border: 1px solid #ddd;
-  padding: 20px;
-  width: 250px;
-}
-
-.product img {
-  max-width: 100%;
-  height: auto;
-}
-
-.product h3 {
-  font-size: 18px;
-  margin: 15px 0 10px;
-}
-
-.product p {
-  color: #e91e63;
-  font-weight: bold;
-}
-
-/* Footer */
-footer {
-  background: #111;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-}
+  <script src="scripts.js"></script>
+</body>
+  </html>
+              
